Text enhancement api
